--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-
+    <h1>Change Font Size</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident pariatur magni, incidunt quod a velit dolorem
+        adipisci ducimus, nostrum amet, impedit asperiores itaque obcaecati. Eligendi deserunt possimus omnis? Ipsam,
+        eos!</p>
 </body>
 
 </html>
