Add inline script

--- a/index.html
+++ b/index.html
@@ -10,10 +10,22 @@
 </head>
 
 <body>
-    <h1>Change Font Size</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident pariatur magni, incidunt quod a velit dolorem
-        adipisci ducimus, nostrum amet, impedit asperiores itaque obcaecati. Eligendi deserunt possimus omnis? Ipsam,
-        eos!</p>
+    <div class="container">
+        <div class="buttons">
+            <span class="btn active" onclick="document.getElementById('text').style.fontSize='1em'">A</span>
+            <span class="btn" onclick="document.getElementById('text').style.fontSize='1.5em'">A</span>
+            <span class="btn" onclick="document.getElementById('text').style.fontSize='2em'">A</span>
+        </div>
+        <div class="content" id="text">
+            <h1>Change Font Size</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident pariatur magni, incidunt quod a velit
+                dolorem
+                adipisci ducimus, nostrum amet, impedit asperiores itaque obcaecati. Eligendi deserunt possimus omnis?
+                Ipsam,
+                eos!</p>
+        </div>
+    </div>
+
 </body>
 
 </html>
