Remove inline script and add main.js

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <div class="container">
         <div class="buttons">
-            <span class="btn active" onclick="document.getElementById('text').style.fontSize='1em'">A</span>
-            <span class="btn" onclick="document.getElementById('text').style.fontSize='1.5em'">A</span>
-            <span class="btn" onclick="document.getElementById('text').style.fontSize='2em'">A</span>
+            <span class="btn active" data-font-size="1">A</span>
+            <span class="btn" data-font-size="1.25">A</span>
+            <span class="btn" data-font-size="1.5">A</span>
         </div>
         <div class="content" id="text">
             <h1>Change Font Size</h1>
@@ -25,7 +25,7 @@
                 eos!</p>
         </div>
     </div>
-
+    <script src="js/main.js"></script>
 </body>
 
 </html>
